docker-war-demo-ingress-k8s.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: docker-war-demo
  name: docker-war-demo
spec:
  ports:
    - port: 8080
  selector:
    app: docker-war-demo

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-war-demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-war-demo
    spec:
      containers:
      - name: docker-war-demo
        image: harbor.k8s.com/demo/docker-war-demo
        ports:
        - containerPort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-war-demo
spec:
  rules:
  - host: docker-war-demo.k8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-war-demo
          servicePort: 8080
